--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,7 +25,7 @@
 			margin:0px;
 			padding:0px;
 			height:100%;
-			overflow:hidden;
+			overflow:auto;
 		}
 	</style>
 	<script>
@@ -42,7 +42,10 @@
 
 </head>
 
+
 <body>
+<div class="container-fluid">
+    
 <%- body %>
 
         <!-- jQuery CDN - Slim version (=without AJAX) -->
@@ -59,7 +62,7 @@
             });
         });
     </script>
-
+</div>
 </body>
 
 </html>
