Calendar sending info to server

--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -1,9 +1,9 @@
 <div class="wrapper">
 	  <% include templates/navigation %>
 	<div id="content">
-		<% include templates/toggleNav %>
+		<%- include templates/toggleNav %>
 
-		<% include scheduler/public/index.html %>
+	 <%- include scheduler/public/index.html %>
    
 	</div>
 </div>
