--- a/views/scheduler/public/index.html
+++ b/views/scheduler/public/index.html
@@ -15,7 +15,7 @@
 	<script>
 		function init() {
 			scheduler.config.xml_date="%Y-%m-%d %H:%i";
-			scheduler.init('scheduler_here',new Date(2018,8,4),"month");
+			scheduler.init('scheduler_here',new Date(),"month");
 
 			scheduler.templates.xml_date = function(value){ return new Date(value); };
 			scheduler.load("/data", "json");
